# rag-eval

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  groq-8b.yaml
data/corpus/: branching.md  committing.md  git-basics.md  history-and-log.md  merging.md  rebasing.md  remotes.md  stashing.md  tagging.md  undoing-changes.md
data/eval/: eval_set.jsonl
docs/: demo.tape  writeup.md
src/rag_eval/: __init__.py  answer.py  api.py  cli.py  config.py  diagnostics.py  embed.py  errors.py  llm.py  observability.py  pipeline.py  render.py  resilience.py  retrieve.py  schemas.py  store.py
src/rag_eval/eval/: __init__.py  artifacts.py  dataset.py  judge.py  retrieval_metrics.py  runner.py  sweep.py
src/rag_eval/ingest/: __init__.py  chunker.py  loaders.py
tests/: test_api.py  test_artifacts.py  test_chunker.py  test_citation_resolution.py  test_diagnostics.py  test_judge.py  test_provider_factory.py  test_resilience.py  test_retrieval_metrics.py
