[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-eval"
version = "0.1.0"
description = "A production-grade RAG system with a first-class evaluation harness."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rudra Raval", email = "rudraraval95@gmail.com" }]
keywords = ["rag", "llm", "evaluation", "vector-database", "retrieval"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pypdf>=4.2",
    "groq>=0.11",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
voyage = ["voyageai>=0.2"]
anthropic = ["anthropic>=0.34"]
html = ["trafilatura>=1.10"]
all = ["openai>=1.40", "voyageai>=0.2", "anthropic>=0.34", "trafilatura>=1.10"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
rag-eval = "rag_eval.cli:app"

[project.urls]
Homepage = "https://github.com/rudraraval95/rag-eval"
Repository = "https://github.com/rudraraval95/rag-eval"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
